--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
